Images loaded with Picasso.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">Fuzz</string>
 
     <!-- Activities -->
+    <string name="activity_image">Zoom</string>
     <string name="error_cause">The error cause is </string>
 
     <!-- Fragments -->
