--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <!-- Activities -->
     <string name="activity_image">Zoom</string>
+    <string name="activity_web_view">WebView</string>
     <string name="error_cause">The error cause is </string>
 
     <!-- Fragments -->
